feat: add dark mode support for global

--- a/src/assets/custom_theme_variables.scss
+++ b/src/assets/custom_theme_variables.scss
@@ -1,3 +1,27 @@
+// light mode 颜色变量
+$light-background-color: #f4f4f4;
+$light-bars-color: #f4f4f4dd;
+$light-popup-color: #f4f4f4;
+$light-divider-color: #00000006;
+$light-card-color: #fafafa;
+
+$light-primary-text-color: #303133;
+$light-second-text-color: #606266;
+$light-comment-text-color: #909399;
+$light-lowest-text-color: #c0c4cc;
+
+// dark mode 颜色变量
+$dark-background-color: #121212;
+$dark-bars-color: #121212aa;
+$dark-popup-color: #121212;
+$dark-divider-color: #ffffff08;
+$dark-card-color: #202020;
+
+$dark-primary-text-color: #ffffffee;
+$dark-second-text-color: #ffffffbb;
+$dark-comment-text-color: #ffffff88;
+$dark-lowest-text-color: #ffffff36;
+
 // 主题变量名 查看 -> https://nutui.jd.com/theme/#/base
 
 $primary-color: #478ef2;
