style: edit severl color variable

--- a/src/assets/custom_theme_variables.scss
+++ b/src/assets/custom_theme_variables.scss
@@ -1,6 +1,7 @@
 // light mode 颜色变量
 $light-background-color: #f4f4f4;
-$light-bars-color: #f4f4f4dd;
+$light-nav-bar-color: #f4f4f4;
+$light-tab-bar-color: #f4f4f4bb;
 $light-popup-color: #f4f4f4;
 $light-divider-color: #00000006;
 $light-card-color: #fafafa;
@@ -12,7 +13,8 @@ $light-lowest-text-color: #c0c4cc;
 
 // dark mode 颜色变量
 $dark-background-color: #121212;
-$dark-bars-color: #121212aa;
+$dark-nav-bar-color: #121212;
+$dark-tab-bar-color: #121212aa;
 $dark-popup-color: #121212;
 $dark-divider-color: #ffffff08;
 $dark-card-color: #202020;
