feat(sub-page): Add the feature to preview specific platforms

--- a/src/assets/custom_theme_variables.scss
+++ b/src/assets/custom_theme_variables.scss
@@ -5,6 +5,7 @@ $light-tab-bar-color: #f4f4f4bb;
 $light-popup-color: #f4f4f4;
 $light-divider-color: #00000006;
 $light-card-color: #fafafa;
+$light-dialog-color: #f8f8f8;
 
 $light-primary-text-color: #303133;
 $light-second-text-color: #606266;
@@ -18,6 +19,7 @@ $dark-tab-bar-color: #121212aa;
 $dark-popup-color: #121212;
 $dark-divider-color: #ffffff08;
 $dark-card-color: #202020;
+$dark-dialog-color: #202020;
 
 $dark-primary-text-color: #ffffffee;
 $dark-second-text-color: #ffffffbb;
