--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -98,7 +98,18 @@ img {
 .nut-icon-refresh:before {
   content: "\e690";
 }
-
+.nut-icon-close-little:before {
+  content: "\e6aa";
+}
+.nut-icon-close:before {
+  content: "\e674";
+}
+.nut-icon-mask-close:before {
+  content: "\e6cd";
+}
+.nut-icon-circle-close:before {
+  content: "\e699";
+}
 .nut-icon-checked:before {
   content: "\e601";
 }
