--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -85,14 +85,15 @@ img {
   content: '\e681';
 }
 .nut-icon-left:before {
-  content: '\e673';
+  content: '\e6c9';
 }
 .nut-icon-rect-left:before {
   content: '\e6c9';
 }
 
 .nut-icon-right:before {
-  content: '\e698';
+  content: '\e6cb';
+  color: #666;
 }
 .nut-icon-rect-right:before {
   content: '\e6cb'; // \2003 占位符
