--- a/src/assets/styles/custom_variables.scss
+++ b/src/assets/styles/custom_variables.scss
@@ -116,3 +116,4 @@ $notify-primary-background-color: linear-gradient(
 );
 $notify-success-background-color: var(--succeed-color);
 $notify-danger-background-color: var(--danger-color);
+$badge-border:none;
