fix navbar title

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -162,7 +162,8 @@ img {
 .nut-icon {
   display: inline-block;
   position: relative;
-  width: $icon-width;
+  width: 5px;
+  left: 10px;
   height: $icon-height;
   line-height: $icon-line-height;
   text-align: right;
