--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -162,7 +162,7 @@ img {
 .nut-icon {
   display: inline-block;
   position: relative;
-  left: 10px;
+  width: $icon-width;
   height: $icon-height;
   line-height: $icon-line-height;
   text-align: right;
