--- a/src/assets/styles/overwritten_css_var.scss
+++ b/src/assets/styles/overwritten_css_var.scss
@@ -140,3 +140,9 @@ input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
   color: var(--comment-text-color) !important;
 }
+
+.Toastify__close-button {
+  position: relative;
+  left: -10px;
+  bottom: -10px;
+}
