feat: 文件功能(后端 > 2.14.143)

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -75,6 +75,18 @@ img {
   font-weight: bold;
   line-height: 2;
 }
+// .nut-icon-order:before {
+//   content: "\e697";
+// }
+// .nut-icon-edit:before {
+//   content: "\e667";
+// }
+// .nut-icon-find:before {
+//   content: "\e661";
+// }
+.nut-icon-category:before {
+  content: "\e662";
+}
 .nut-icon-issue:before {
   content: '\e6b1';
 }
