chore: SurgeMac 说明文案

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -84,6 +84,9 @@ img {
 // .nut-icon-find:before {
 //   content: "\e661";
 // }
+.nut-icon-tips:before {
+  content: "\e671";
+}
 .nut-icon-category:before {
   content: "\e662";
 }
