--- a/src/assets/styles/overwritten_css_var.scss
+++ b/src/assets/styles/overwritten_css_var.scss
@@ -31,6 +31,7 @@
 
 // picker
 .nut-popup {
+  -webkit-user-select: none;
   user-select: none;
   .nut-picker-roller {
     @media screen and (min-width: 560px) {
