--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -115,6 +115,17 @@ img {
   content: '\e6cb'; // \2003 占位符
   color: var(--lowest-text-color); // 更多设置
 }
+.nut-icon-rect-down:before {
+  content: "\e6cc";
+}
+
+.nut-icon-triangle-down:before {
+  content: "\eb6d";
+}
+
+.nut-icon-triangle-up:before {
+  content: "\eb6e";
+}
 .nut-icon-arrow-right2:before {
   content: '\e6a9';
 }
