feat: 支持收起/展开订阅

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -113,7 +113,7 @@ img {
 }
 .nut-icon-rect-right:before {
   content: '\e6cb'; // \2003 占位符
-  color: var(--lowest-text-color); // 更多设置
+  // color: var(--lowest-text-color); // 更多设置
 }
 .nut-icon-rect-down:before {
   content: "\e6cc";
