feat: 图标仓库上线

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -84,6 +84,11 @@ img {
 // .nut-icon-find:before {
 //   content: "\e661";
 // }
+
+.nut-icon-shop:before {
+  content: "\e688";
+  cursor: pointer;
+}
 .nut-icon-tips:before {
   content: "\e671";
   cursor: pointer;
