style: 修复宽屏设备下节点信息面板二维码样式问题
增加overflow: auto

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -87,11 +87,11 @@ img {
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
   z-index: 1100;
-  max-height: 90vh;
+  max-height: 95vh;
   max-width: 80vw;
   width: 80vw;
   border-radius: 8px;
-  overflow: hidden;
+  overflow: auto;
   padding-bottom: 24px;
 }
 .nut-button {
